# benchmarks

./: .gitignore  README.md  debug_output.txt  pyproject.toml
.github/workflows/: ci.yml
data/corpus/: README.md
data/datasets/: canary_v1.json
data/datasets/canary_context_flooding/: config.yaml  dataset.json
data/datasets/canary_naive/: config.yaml  dataset.json
data/datasets/example/: config.yaml
data/prompts/: system_prompts.yaml  templates.yaml
experiments/: canary_baseline.yaml  canary_naive.yaml
experiments/templates/: generator_canary.yaml
resources/corpus/: fetch_squad_data.py
scenarios/canary_naive/: dataset.json  dataset_config.yaml  experiment_baseline.yaml  experiment_gpt4.yaml
scenarios/canary_naive_base64/: experiment.yaml  experiment_canary.yaml
scenarios/example/: dataset.json  dataset_config.yaml  experiment_example.yaml
scripts/: fetch_squad_data.py
src/dcv_benchmark/: constants.py  defaults.py  main.py  runner.py
src/dcv_benchmark/analytics/: plotter.py  reporter.py
src/dcv_benchmark/cli/: data.py  experiments.py  run.py
src/dcv_benchmark/components/: embedder.py  llms.py  vector_store.py
src/dcv_benchmark/core/: factories.py  runner.py
src/dcv_benchmark/data_factory/: base.py  bipia.py  builder.py  downloader.py  injector.py  loaders.py  retrieval.py  squad.py
src/dcv_benchmark/evaluators/: base.py  bipia.py  bipia_prompts.py  canary.py  keyword.py  language.py  squad.py
src/dcv_benchmark/models/: bipia_config.py  data_factory.py  dataset.py  evaluation.py  experiments_config.py  metrics.py  report.py  responses.py  traces.py
src/dcv_benchmark/targets/: base.py  basic_rag.py  basic_rag_guard.py
src/dcv_benchmark/utils/: dataset_loader.py  experiment_loader.py  helper.py  logger.py  prompt_loader.py
tests/integration/: test_config_options.py  test_runner.py
tests/unit/: test_runner.py
tests/unit/analytics/: test_plotter.py  test_reporter.py  test_security_calculator.py
tests/unit/cli/: test_data_cli.py  test_run.py
tests/unit/components/: test_llms.py  test_vector_store.py
tests/unit/data_factory/: test_builder.py  test_builder_golden.py  test_embedder.py  test_injector.py  test_loaders.py  test_retrieval.py
tests/unit/evaluators/: test_bipia.py  test_canary.py  test_keyword.py  test_language.py
tests/unit/targets/: test_basic_rag.py  test_basic_rag_scan.py
tests/unit/utils/: test_dataset_loader.py  test_experiment_config_loader.py  test_logger.py  test_prompt_loader.py
workspace/experiments/bipia_example/: experiment_bipia.yaml
workspace/experiments/bipia_val/: experiment_bipia.yaml
workspace/experiments/canary_naive_base64/: experiment.yaml  experiment_baseline.yaml
workspace/experiments/example/: experiment_example.yaml
workspace/prompts/: system_prompts.yaml
(+122 files in other folders)
